--- a/DevslopesSocial/Base.lproj/Main.storyboard
+++ b/DevslopesSocial/Base.lproj/Main.storyboard
@@ -219,22 +219,23 @@
                                     <constraint firstAttribute="trailing" secondItem="VR3-Si-c3c" secondAttribute="trailing" constant="8" id="zZH-sn-6bu"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ufn-Rz-04D">
-                                <rect key="frame" x="0.0" y="162" width="375" height="505"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ufn-Rz-04D">
+                                <rect key="frame" x="0.0" y="154" width="375" height="513"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" red="0.81176470590000005" green="0.84705882349999995" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="346" id="PPE-rx-5Lr">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="346"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="378" id="PPE-rx-5Lr" customClass="PostCell" customModule="DevslopesSocial" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="378"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PPE-rx-5Lr" id="9HV-UH-jtE">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="345.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="378"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FzD-o9-Jkf" customClass="FancyView" customModule="DevslopesSocial" customModuleProvider="target">
-                                                    <rect key="frame" x="16" y="8" width="343" height="329.5"/>
+                                                    <rect key="frame" x="16" y="8" width="343" height="362"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="8We-z3-XDE">
-                                                            <rect key="frame" x="8" y="8" width="327" height="283.5"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="8We-z3-XDE">
+                                                            <rect key="frame" x="8" y="8" width="327" height="320"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="vH0-nj-pMc">
                                                                     <rect key="frame" x="0.0" y="0.0" width="327" height="60"/>
@@ -248,11 +249,11 @@
                                                                         </imageView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SupBroToe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CcX-cd-J5b">
                                                                             <rect key="frame" x="70" y="0.0" width="187" height="60"/>
-                                                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="22"/>
                                                                             <color key="textColor" red="0.86666666670000003" green="0.17254901959999999" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="displayP3"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-heart" translatesAutoresizingMaskIntoConstraints="NO" id="lPU-fF-6Cq" customClass="CircleView" customModule="DevslopesSocial" customModuleProvider="target">
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-heart" translatesAutoresizingMaskIntoConstraints="NO" id="lPU-fF-6Cq">
                                                                             <rect key="frame" x="267" y="0.0" width="60" height="60"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="60" id="1h5-5e-oR5"/>
@@ -262,11 +263,17 @@
                                                                     </subviews>
                                                                 </stackView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="HLJ-jZ-LxH">
-                                                                    <rect key="frame" x="0.0" y="67" width="327" height="127.5"/>
+                                                                    <rect key="frame" x="0.0" y="69" width="327" height="150"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="150" id="GcM-uu-fuf"/>
+                                                                    </constraints>
                                                                 </imageView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8Y1-eM-ZDG">
-                                                                    <rect key="frame" x="0.0" y="201.5" width="327" height="82"/>
+                                                                    <rect key="frame" x="0.0" y="228" width="327" height="92"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="k68-Yo-HwK"/>
+                                                                    </constraints>
                                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -274,16 +281,16 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="wUs-xH-XeP">
-                                                            <rect key="frame" x="256.5" y="299.5" width="78.5" height="22"/>
+                                                            <rect key="frame" x="256.5" y="336" width="78.5" height="18"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmC-Kc-DTc">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="35.5" height="22"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="35.5" height="18"/>
                                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
                                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8888" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uag-xr-wna">
-                                                                    <rect key="frame" x="42.5" y="0.0" width="36" height="22"/>
+                                                                    <rect key="frame" x="42.5" y="0.0" width="36" height="18"/>
                                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
                                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
@@ -302,6 +309,7 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.81176470590000005" green="0.84705882349999995" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="FzD-o9-Jkf" secondAttribute="trailing" constant="16" id="MUy-dh-oEY"/>
                                                 <constraint firstItem="FzD-o9-Jkf" firstAttribute="leading" secondItem="9HV-UH-jtE" secondAttribute="leading" constant="16" id="SM1-Zt-H1p"/>
@@ -309,6 +317,13 @@
                                                 <constraint firstItem="FzD-o9-Jkf" firstAttribute="top" secondItem="9HV-UH-jtE" secondAttribute="top" constant="8" id="pnC-cD-6G9"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="caption" destination="8Y1-eM-ZDG" id="ved-AL-Lgl"/>
+                                            <outlet property="likesLbl" destination="Uag-xr-wna" id="zla-xY-eC9"/>
+                                            <outlet property="postImg" destination="HLJ-jZ-LxH" id="FYt-2j-pUM"/>
+                                            <outlet property="profileImg" destination="bMK-wa-jl3" id="Yxe-qz-s2Z"/>
+                                            <outlet property="userNameLbl" destination="CcX-cd-J5b" id="bes-sd-dQo"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -323,11 +338,12 @@
                             <constraint firstItem="QxK-Y8-rqI" firstAttribute="top" secondItem="dOQ-uH-wl7" secondAttribute="bottom" constant="16" id="i8F-Fh-1wc"/>
                             <constraint firstAttribute="trailing" secondItem="dOQ-uH-wl7" secondAttribute="trailing" id="kok-xA-Jce"/>
                             <constraint firstAttribute="trailing" secondItem="ufn-Rz-04D" secondAttribute="trailing" id="u1P-xs-aqD"/>
-                            <constraint firstItem="ufn-Rz-04D" firstAttribute="top" secondItem="QxK-Y8-rqI" secondAttribute="bottom" constant="16" id="ubG-ds-HXo"/>
+                            <constraint firstItem="ufn-Rz-04D" firstAttribute="top" secondItem="QxK-Y8-rqI" secondAttribute="bottom" constant="8" id="ubG-ds-HXo"/>
                             <constraint firstItem="4TR-MP-aoN" firstAttribute="top" secondItem="ufn-Rz-04D" secondAttribute="bottom" id="x0z-Pg-268"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="ufn-Rz-04D" id="jGR-LY-iI8"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="7cl-9E-5JP"/>
                     </connections>
                 </viewController>
