--- a/DevslopesSocial/Base.lproj/Main.storyboard
+++ b/DevslopesSocial/Base.lproj/Main.storyboard
@@ -188,13 +188,17 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="VR3-Si-c3c">
                                         <rect key="frame" x="8" y="8" width="327" height="49"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="uKt-re-osn" customClass="CircleView" customModule="DevslopesSocial" customModuleProvider="target">
+                                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="uKt-re-osn" customClass="CircleView" customModule="DevslopesSocial" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="49" height="49"/>
                                                 <color key="backgroundColor" red="0.0" green="0.51372549020000002" blue="0.56078431370000004" alpha="1" colorSpace="calibratedRGB"/>
+                                                <gestureRecognizers/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="49" id="gxN-rG-Z9e"/>
                                                     <constraint firstAttribute="height" constant="49" id="l4l-79-Ifz"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="JTY-hD-o8f" appends="YES" id="zB7-yK-Faq"/>
+                                                </connections>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Add a caption" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pe9-Ih-F4p" customClass="FancyField" customModule="DevslopesSocial" customModuleProvider="target">
                                                 <rect key="frame" x="59" y="0.0" width="209" height="49"/>
@@ -347,6 +351,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="imageAdd" destination="uKt-re-osn" id="PXx-cD-eJg"/>
                         <outlet property="tableView" destination="ufn-Rz-04D" id="jGR-LY-iI8"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="7cl-9E-5JP"/>
                     </connections>
@@ -355,6 +360,11 @@
                 <tapGestureRecognizer id="3LE-xA-V5L">
                     <connections>
                         <action selector="signOutTapped:" destination="4E6-P6-weY" id="OJl-yN-aro"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="JTY-hD-o8f">
+                    <connections>
+                        <action selector="addImageTapped:" destination="4E6-P6-weY" id="Bck-4r-LUK"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
